@@ -1,3 +1,8 @@
+2006-11-20  Veerapuram Varadhan  <vvaradhan@novell.com>
+
+	* camel/camel-exchange-store.c: (make_folder_info): Decode path
+	name and use it as full_name.
+	
 2006-11-16  Srinivasa Ragavan  <sragavan@novell.com>
 
 	* addressbook/e-book-backend-gal.c: (contact_list_handler): Fix for
